run tests for metapkgs

--- a/uwrt_mars_rover/CMakeLists.txt
+++ b/uwrt_mars_rover/CMakeLists.txt
@@ -2,4 +2,11 @@ cmake_minimum_required(VERSION 3.14.4)
 project(uwrt_mars_rover)
 
 find_package(ament_cmake REQUIRED)
+
+if (BUILD_TESTING)
+  # xmllint
+  find_package(ament_cmake_xmllint REQUIRED)
+  ament_xmllint()
+endif ()
+
 ament_package()
