--- a/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain/CMakeLists.txt
+++ b/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain/CMakeLists.txt
@@ -2,4 +2,11 @@ cmake_minimum_required(VERSION 3.5)
 project(uwrt_mars_rover_drivetrain)
 
 find_package(ament_cmake REQUIRED)
+
+if (BUILD_TESTING)
+  # xmllint
+  find_package(ament_cmake_xmllint REQUIRED)
+  ament_xmllint()
+endif ()
+
 ament_package()
