force latest flake8 in linter job

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,7 +38,7 @@ jobs:
     strategy:
       fail-fast: false # We want all the linters to run even if one fails
       matrix:
-        linter: [ cppcheck, flake8, xmllint ]
+        linter: [ cppcheck, xmllint ]
 
     steps:
       - name: Checkout Repository
@@ -49,6 +49,32 @@ jobs:
         with:
           distribution: ${{ env.ROS_DISTRO }}
           linter: ${{ matrix.linter }}
+          package-name: ${{ env.PACKAGES_TO_TEST }}
+
+  linters-flake8:
+    name: ament-flake8
+    needs: prepare-actions-environment
+    runs-on: ubuntu-latest
+    container:
+      image: ${{ needs.prepare-actions-environment.outputs.image }}
+      options: -u root
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Force latest version of flake8
+        # Latest flake8 available in ubuntu-focal apt (and the ros-tooling-image) is not up to date with python3.8.
+        # Avoids following error:
+        # "pyflakes" failed during execution due to "'FlakesChecker' object has no attribute 'NAMEDEXPR'"
+        run: |
+          pip install --upgrade flake8
+
+      - name: ROS2 Linter - [ament-flake8]
+        uses: ros-tooling/action-ros-lint@master
+        with:
+          distribution: ${{ env.ROS_DISTRO }}
+          linter: flake8
           package-name: ${{ env.PACKAGES_TO_TEST }}
 
   linters-clang-format:
