--- a/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_hw/package.xml
+++ b/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_hw/package.xml
@@ -22,7 +22,7 @@
 
   <exec_depend>uwrt_mars_rover_drivetrain_description</exec_depend>
 
-  <test_depend>ament_clang_tidy</test_depend>
+  <test_depend>ament_cmake_clang_format</test_depend>
   <test_depend>ament_cmake_clang_tidy</test_depend>
   <test_depend>ament_cmake_cppcheck</test_depend>
   <test_depend>ament_cmake_flake8</test_depend>
