--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -168,10 +168,12 @@ jobs:
         # Latest flake8 available in ubuntu-focal apt (and the ros-tooling-image) is not up to date with python3.8.
         # Avoids following error:
         # "pyflakes" failed during execution due to "'FlakesChecker' object has no attribute 'NAMEDEXPR'"
+        #
+        # rm /opt/ros/galactic/bin/ament_* required for ament_cmake_test to find the ament_lint installed from common_upstream_dependencies.repos
         run: |
           docker exec arm64-ros sudo apt install python3-pip -y
-          docker exec arm64-ros pip install --upgrade flake8
-          docker exec arm64-ros pip freeze | grep flake8
+          docker exec arm64-ros pip install -U --upgrade flake8
+          docker exec arm64-ros rm /opt/ros/galactic/bin/ament_*
 
       - name: Build ROS2 Packages and Run Tests
         run: >
