Drivetrain hw for ros2 galactic (#171)
* clean up uwrt_mars_rover metapkg files
* add rviz launch file for drivetrain urdf
* xacro-ify urdf
* xacro-ify ros2control urdf
* drivetrain hw port to galactic + cleanup
* add drivetrain packages to CI. add pull request template.

--- a/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_description/CMakeLists.txt
+++ b/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain_description/CMakeLists.txt
@@ -3,11 +3,26 @@ project(uwrt_mars_rover_drivetrain_description)
 
 find_package(ament_cmake REQUIRED)
 
-
-
 install(
-    DIRECTORY urdf ros2_control
-    DESTINATION share/${PROJECT_NAME}
+    DIRECTORY
+      config
+      launch
+      rviz
+      urdf
+    DESTINATION
+      share/${PROJECT_NAME}
 )
+
+if(BUILD_TESTING)
+  # flake8
+  find_package(ament_cmake_flake8 REQUIRED)
+  ament_flake8(
+      CONFIG_FILE ${CMAKE_SOURCE_DIR}/../../.flake8
+  )
+
+  # xmllint
+  find_package(ament_cmake_xmllint REQUIRED)
+  ament_xmllint()
+endif()
 
 ament_package()
