--- a/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain/package.xml
+++ b/uwrt_mars_rover_drivetrain/uwrt_mars_rover_drivetrain/package.xml
@@ -3,17 +3,21 @@
 <package format="3">
   <name>uwrt_mars_rover_drivetrain</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="omarmon@uwaterloo.ca">niiquaye</maintainer>
-  <license>TODO: License declaration</license>
+  <description>Package grouping all the packages written for the UWRT's drivetrain</description>
+
+  <maintainer email="omarmon@uwaterloo.ca">Orson Marmon</maintainer>
+
+  <license>MIT</license>
+
+  <author email="omarmon@uwaterloo.ca">Orson Marmon</author>
+  <author email="melvin.mc.wang@gmail.com">Melvin Wang</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <build_depend>uwrt_mars_rover_drivetrain_description</build_depend>
-
-  
   <exec_depend>uwrt_mars_rover_drivetrain_hw</exec_depend>
+  <exec_depend>uwrt_mars_rover_drivetrain_description</exec_depend>
 
+  <test_depend>ament_cmake_xmllint</test_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
