--- a/uwrt_arm_cartesian_controller/package.xml
+++ b/uwrt_arm_cartesian_controller/package.xml
@@ -2,15 +2,31 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>uwrt_arm_cartesian_controller</name>
-  <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="yreda@uwaterloo.ca">younes</maintainer>
-  <license>TODO: License declaration</license>
+  <version>1.0.0</version>
+  <description>The uwrt_arm_cartesian_controller converts velocity commands expressed in cartesian coordinates to joint velocities</description>
+  <maintainer email="yreda@uwaterloo.ca">Younes Reda</maintainer>
+
+  <license>MIT</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
+  <depend>controller_interface</depend>
+  <depend>hardware_interface</depend>
+  <depend>rclcpp</depend>
+  <depend>rclcpp_lifecycle</depend>
+  <depend>realtime_tools</depend>
+  <depend>orocos_kdl</depend>
+  <depend>geometry_msgs</depend>
+
+  <build_depend>pluginlib</build_depend>
+
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
+  <test_depend>ament_cmake_clang_format</test_depend>
+  <test_depend>ament_cmake_clang_tidy</test_depend>
+  <test_depend>ament_cmake_cppcheck</test_depend>
+  <test_depend>ament_cmake_flake8</test_depend>
+  <test_depend>ament_cmake_xmllint</test_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
