--- a/uwrt_mars_rover_utils/package.xml
+++ b/uwrt_mars_rover_utils/package.xml
@@ -5,7 +5,7 @@
   <version>0.0.0</version>
   <description>UWRT Mars Rover utilities package for avoiding duplicate code.</description>
   <maintainer email="keyonjerome@gmail.com">keyonjerome</maintainer>
-  <license>TODO: License declaration</license>
+  <license>MIT</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
