--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -182,14 +182,14 @@ jobs:
             colcon test --packages-select ${{ env.PACKAGES_TO_TEST }} --return-code-on-test-failure --event-handlers console_cohesion+"
 
   windows-amd64-build-and-test: # No rostooling/setup-ros-docker docker images available for Windows.
-    runs-on: windows-latest
+    runs-on: windows-2019
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
       - name: Setup ROS
-        uses: ros-tooling/setup-ros@master # v0.2 doesn't have commit 45f6b7f which is required for Windows builds
+        uses: ros-tooling/setup-ros@v0.2
         with:
           required-ros-distributions: ${{ env.ROS_DISTRO }}
 
@@ -198,10 +198,10 @@ jobs:
           New-Item -Path C:/ci/ws/install/include -ItemType Directory
         # This is required because the windows binary builds used by setup-ros have the following issue:
         # `Imported target "rclcpp::rclcpp" includes non-existent path`
-        # This can be removed once https://github.com/ros2/ros2/issues/1068 and https://github.com/ros2/rclcpp/issues/1688 are resolved.
+        # This can be removed once https://github.com/ros2/ros2/issues/1068 and https://github.com/ros2/rclcpp/issues/1688 are resolved and released
 
       - name: Build ROS2 Packages and Run Tests
-        uses: wmmc88/action-ros-ci@wmmc88/fix-windows-builds # Revert to upstream action-ros-ci once https://github.com/ros-tooling/action-ros-ci/pull/712 merges
+        uses: ros-tooling/action-ros-ci@v0.2
         with:
           target-ros2-distro: ${{ env.ROS_DISTRO }}
           vcs-repo-file-url: |
