--- a/uwrt_mars_rover_arm/uwrt_mars_rover_arm_description/uwrt_mars_rover_arm_description/config/arm_controllers.yaml
+++ b/uwrt_mars_rover_arm/uwrt_mars_rover_arm_description/uwrt_mars_rover_arm_description/config/arm_controllers.yaml
@@ -11,39 +11,59 @@ controller_manager:
     position_trajectory_controller:
       type: joint_trajectory_controller/JointTrajectoryController
 
-# matches to names from ros2control.xacro
-forward_position_controller:
+    velocity_controller:
+      type: velocity_controllers/JointGroupVelocityController
+
+velocity_controller:
   ros__parameters:
     joints:
       - turntable_joint
-      - upper_arm_joint
-      - wrist_joint
-      - claw_left_joint
-      - claw_right_joint
-    interface_name: position
-
-
-position_trajectory_controller:
-  ros__parameters:
-    joints:
-      - turntable_joint
-      - upper_arm_joint
-      - wrist_joint
-      - claw_left_joint
-      - claw_right_joint
-
+      # - upper_arm_joint
+      # - wrist_joint
+      # - claw_left_joint
+      # - claw_right_joint
     command_interfaces:
-      - position
-
+      - velocity
     state_interfaces:
       - position
+      - velocity
 
-    state_publish_rate: 200.0 # Defaults to 50
-    action_monitor_rate: 20.0 # Defaults to 20
 
-    allow_partial_joints_goal: false # Defaults to false
-    open_loop_control: true
-    allow_integration_in_goal_trajectories: true
-    constraints:
-      stopped_velocity_tolerance: 0.01 # Defaults to 0.01
-      goal_time: 0.0 # Defaults to 0.0 (start immediately)
+      
+
+# matches to names from ros2control.xacro
+# forward_position_controller:
+#   ros__parameters:
+#     joints:
+#       - turntable_joint
+#       - upper_arm_joint
+#       - wrist_joint
+#       - claw_left_joint
+#       - claw_right_joint
+#     interface_name: position
+
+
+# position_trajectory_controller:
+#   ros__parameters:
+#     joints:
+#       - turntable_joint
+#       - upper_arm_joint
+#       - wrist_joint
+#       - claw_left_joint
+#       - claw_right_joint
+
+#     command_interfaces:
+#       - position
+
+#     state_interfaces:
+#       - position
+
+#     state_publish_rate: 200.0 # Defaults to 50
+#     action_monitor_rate: 20.0 # Defaults to 20
+
+#     allow_partial_joints_goal: false # Defaults to false
+#     open_loop_control: true
+#     allow_integration_in_goal_trajectories: true
+#     constraints:
+#       stopped_velocity_tolerance: 0.01 # Defaults to 0.01
+#       goal_time: 0.0 # Defaults to 0.0 (start immediately)
