URDF booting in Gazebo ros2_control!

--- a/uwrt_mars_rover_arm/uwrt_mars_rover_arm_description/uwrt_mars_rover_arm_description/config/arm_controllers.yaml
+++ b/uwrt_mars_rover_arm/uwrt_mars_rover_arm_description/uwrt_mars_rover_arm_description/config/arm_controllers.yaml
@@ -1,6 +1,6 @@
 controller_manager:
   ros__parameters:
-    update_rate: 10  # Hz
+    update_rate: 100  # Hz
 
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
@@ -18,10 +18,10 @@ velocity_controller:
   ros__parameters:
     joints:
       - turntable_joint
-      # - upper_arm_joint
-      # - wrist_joint
-      # - claw_left_joint
-      # - claw_right_joint
+      - upper_arm_joint
+      - wrist_joint
+      - claw_left_joint
+      - claw_right_joint
     command_interfaces:
       - velocity
     state_interfaces:
