--- a/uwrt_mars_rover_utilities/CMakeLists.txt
+++ b/uwrt_mars_rover_utilities/CMakeLists.txt
@@ -1,25 +1,51 @@
 cmake_minimum_required(VERSION 3.8)
 project(uwrt_mars_rover_utilities)
 
+if (NOT CMAKE_CXX_STANDARD)
+    set(CMAKE_CXX_STANDARD 20)
+endif ()
+
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
-# find dependencies
 find_package(ament_cmake REQUIRED)
-# uncomment the following section in order to fill in
-# further dependencies manually.
-# find_package(<dependency> REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(rclcpp_components REQUIRED)
+find_package(std_msgs REQUIRED)
 
-if(BUILD_TESTING)
-  find_package(ament_lint_auto REQUIRED)
-  # the following line skips the linter which checks for copyrights
-  # uncomment the line when a copyright and license is not present in all source files
-  #set(ament_cmake_copyright_FOUND TRUE)
-  # the following line skips cpplint (only works in a git repo)
-  # uncomment the line when this package is not in a git repo
-  #set(ament_cmake_cpplint_FOUND TRUE)
-  ament_lint_auto_find_test_dependencies()
-endif()
+include_directories(include)
+
+add_subdirectory(lib/uwrt_mars_rover_hw_bridge)
+
+add_library(${PROJECT_NAME}
+    src/uwrt_can.cpp
+    #src/uwrt_params.cpp
+)
+
+ament_target_dependencies(${PROJECT_NAME}
+    rclcpp
+    std_msgs
+    rclcpp_components
+)
+
+install(TARGETS ${PROJECT_NAME}
+    RUNTIME DESTINATION lib/${PROJECT_NAME}
+    ARCHIVE DESTINATION lib/${PROJECT_NAME}
+    LIBRARY DESTINATION lib/${PROJECT_NAME}
+)
+
+ament_export_include_directories(
+    include
+    lib/uwrt_mars_rover_hw_bridge/include
+)
+
+ament_export_libraries(
+    uwrt-mars-rover-hw-bridge
+)
+
+ament_export_dependencies(
+    rclcpp
+)
 
 ament_package()
