add act flag, fix upstream dep, remove root options

--- a/.github/workflows/cancel-superceeded-jobs.yaml
+++ b/.github/workflows/cancel-superceeded-jobs.yaml
@@ -5,6 +5,7 @@ on: [ push, pull_request ]
 
 jobs:
   cancel-superceded-jobs:
+    if: ${{ !github.event.act }}
     runs-on: ubuntu-latest
     steps:
       - name: Cancel Superceded Jobs
