--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,6 @@
+# the "if" flag with event.json is for running the workflow locally with `act`.
 name: CI
 
-# add on
 on:
   push:
   pull_request:
@@ -21,6 +21,7 @@ env:
 
 jobs:
   prepare-actions-environment:
+    if: ${{ !github.event.act }}  
     # workaround to use variable for IMAGE. Based off of: https://github.community/t/how-to-use-env-with-container-image/17252/25
     runs-on: ubuntu-latest
     outputs:
@@ -30,12 +31,12 @@ jobs:
         run: echo "::set-output name=image::${{ env.IMAGE }}"
 
   linters:
+    if: ${{ !github.event.act }}
     name: ament-${{ matrix.linter }}
     needs: prepare-actions-environment
     runs-on: ubuntu-latest
     container:
       image: ${{ needs.prepare-actions-environment.outputs.image }}
-      options: -u root
     strategy:
       fail-fast: false # We want all the linters to run even if one fails
       matrix:
@@ -53,6 +54,7 @@ jobs:
           package-name: ${{ env.PACKAGES_TO_TEST }}
 
   linters-clang-format:
+    if: ${{ !github.event.act }}
     name: ament-clang-format
     needs: prepare-actions-environment
     runs-on: ubuntu-latest
@@ -73,6 +75,7 @@ jobs:
           package-name: ${{ env.PACKAGES_TO_TEST }}
 
   linters-flake8:
+    if: ${{ !github.event.act }}
     name: ament-flake8
     needs: prepare-actions-environment
     runs-on: ubuntu-latest
@@ -104,7 +107,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ${{ needs.prepare-actions-environment.outputs.image }}
-      options: -u root
+      
 
     steps:
       - name: Force latest version of flake8
