add description package, add rosdep install

--- a/uwrt_mars_rover/package.xml
+++ b/uwrt_mars_rover/package.xml
@@ -6,7 +6,7 @@
   <description>Package grouping all the packages written for the UWRT rover's differential drivetrain.</description>
 
   <maintainer email="omarmon@uwaterloo.ca">niiquaye</maintainer>
-  <maintainer email="melvin.mc.wang@gmail.ca">Melvin Wang</maintainer>
+  <maintainer email="keyonjerome@gmail.com">Keyon Jerome</maintainer>
 
   <license>MIT</license>
 
