--- a/uwrt_mars_rover_utilities/CMakeLists.txt
+++ b/uwrt_mars_rover_utilities/CMakeLists.txt
@@ -14,14 +14,21 @@ find_package(rclcpp REQUIRED)
 find_package(rclcpp_components REQUIRED)
 find_package(std_msgs REQUIRED)
 
-include_directories(include)
-
-add_subdirectory(lib/uwrt_mars_rover_hw_bridge)
+# include_directories(include)
 
 add_library(${PROJECT_NAME}
     src/uwrt_can.cpp
     #src/uwrt_params.cpp
 )
+
+target_include_directories(
+    ${PROJECT_NAME}
+    PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
+)
+
+add_subdirectory(lib/uwrt_mars_rover_hw_bridge)
 
 ament_target_dependencies(${PROJECT_NAME}
     rclcpp
@@ -40,6 +47,7 @@ target_link_libraries(uwrt_can_test_node
     ${PROJECT_NAME}
 )
 
+
 install(TARGETS
     ${PROJECT_NAME}
     uwrt_can_test_node
@@ -49,12 +57,12 @@ install(TARGETS
 )
 
 ament_export_include_directories(
-    include
     lib/uwrt_mars_rover_hw_bridge/include
+    include
 )
 
 ament_export_libraries(
-    uwrt-mars-rover-hw-bridge
+    # uwrt-mars-rover-hw-bridge
 )
 
 ament_export_dependencies(
