--- a/uwrt_mars_rover_arm/uwrt_mars_rover_arm_description/uwrt_mars_rover_arm_urdf/CMakeLists.txt
+++ b/uwrt_mars_rover_arm/uwrt_mars_rover_arm_description/uwrt_mars_rover_arm_urdf/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(uwrt_mars_rover_arm_description)
+project(uwrt_mars_rover_arm_urdf)
 
 # Default to C99
 if(NOT CMAKE_C_STANDARD)
@@ -17,13 +17,13 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-find_package(gazebo_ros2_control REQUIRED)
+# find_package(gazebo_ros2_control REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
 
 install(
-  DIRECTORY launch rviz urdf config
+  DIRECTORY launch rviz urdf config meshes
   DESTINATION share/${PROJECT_NAME}
 )
 
